#基本上完成新主界面的所有功能。+加了统一调整的几个图标

--- a/LightController/Properties/Resources.resx
+++ b/LightController/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="上一步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\上一步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="粘贴步" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\粘贴步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="使用素材" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\使用素材.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -151,11 +154,11 @@
   <data name="粘贴灯1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\粘贴灯1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="下一步" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\下一步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="退出程序" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\退出程序.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="结束浏览" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\结束浏览.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="灯光图" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\灯光图.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -171,9 +174,6 @@
   </data>
   <data name="删除步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\删除步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="复制步" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\复制步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="单灯单步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\单灯单步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -205,8 +205,8 @@
   <data name="浏览效果前" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\浏览效果前.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="下一步" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\下一步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="结束浏览" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\结束浏览.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="实时调试02" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\实时调试02.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -220,7 +220,22 @@
   <data name="灯具编辑" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\灯具编辑.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="粘贴步" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\粘贴步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="复制步" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\复制步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="初始值" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\初始值.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="全部归零" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\全部归零.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="统一步时间" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\统一步时间.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="统一跳渐变" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\统一跳渐变.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="统一通道值" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\统一通道值.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
