--- a/LightController/Properties/Resources.resx
+++ b/LightController/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="统一跳渐变" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\统一跳渐变.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CSJ墙板工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\墙板工具.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="断开连接" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\断开连接.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -132,9 +135,6 @@
   </data>
   <data name="上一步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\上一步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="粘贴步" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\粘贴步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="使用素材" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\使用素材.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -160,17 +160,20 @@
   <data name="粘贴灯1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\粘贴灯1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="下一步" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\下一步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="CSJ中控工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\KTV中央控制器.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="退出程序" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\退出程序.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="结束浏览" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\结束浏览.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="灯光图" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\灯光图.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSJ灯控工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\灯光控制器.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSJ中控工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\KTV中央控制器.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="摇麦设置" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\摇麦设置.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -183,6 +186,9 @@
   </data>
   <data name="删除步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\删除步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="复制步" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\复制步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="单灯单步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\单灯单步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -217,8 +223,8 @@
   <data name="浏览效果前" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\浏览效果前.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="结束浏览" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\结束浏览.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="下一步" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\下一步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="实时调试02" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\实时调试02.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -235,16 +241,13 @@
   <data name="灯具编辑" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\灯具编辑.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="复制步" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\复制步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="粘贴步" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\粘贴步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="统一步时间" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\统一步时间.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CSJ灯控工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\灯光控制器.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="CSJ墙板工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\墙板工具.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CSJ灯库工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CSJ灯库工具.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
