--- a/LightController/Properties/Resources.resx
+++ b/LightController/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="在线升级" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\在线升级.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="浏览效果前" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\浏览效果前.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="统一跳渐变" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\统一跳渐变.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -133,14 +136,23 @@
   <data name="全部归零" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\全部归零.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="统一步时间" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\统一步时间.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="上一步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\上一步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="使用素材" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\使用素材.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CSJ中控工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\KTV中央控制器.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="触发音频后" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\触发音频后.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="网络设置" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\网络设置.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="导出25" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\导出25.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="后插入步1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\后插入步1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -148,32 +160,23 @@
   <data name="触发音频" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\触发音频.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="实时调试" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\实时调试.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CSJ灯控工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\灯光控制器.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="硬件设置" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\硬件设置.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="打开工程" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\打开工程.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="粘贴灯1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\粘贴灯1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="刷新2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\刷新2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="退出程序" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\退出程序.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="结束浏览" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\结束浏览.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="灯光图" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\灯光图.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="CSJ灯控工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\灯光控制器.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="CSJ中控工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\KTV中央控制器.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="摇麦设置" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\摇麦设置.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -181,11 +184,17 @@
   <data name="连接" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\连接.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="刷新" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\刷新.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="灯库编辑" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\灯库编辑.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="删除步" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\删除步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="保存工程2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\保存工程2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="实时调试" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\实时调试.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="复制步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\复制步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -193,14 +202,11 @@
   <data name="单灯单步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\单灯单步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="新建工程" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\新建工程.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="删除步" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\删除步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="单灯单步后" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\单灯单步后.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="保存工程" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\保存工程.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="灯具编辑" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\灯具编辑.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="初始值" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\初始值.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -208,8 +214,11 @@
   <data name="复制灯1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\复制灯1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="前插入步1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\前插入步1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="单灯单步后" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\单灯单步后.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="使用素材" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\使用素材.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="浏览效果后" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\浏览效果后.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -217,11 +226,11 @@
   <data name="追加步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\追加步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="刷新1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\刷新.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="保存素材2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\保存素材2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="浏览效果前" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\浏览效果前.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="下一步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\下一步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -232,22 +241,28 @@
   <data name="全局配置" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\全局配置.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="网络设置" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\网络设置.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="结束浏览" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\结束浏览.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="新建工程2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\新建工程2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="统一通道值" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\统一通道值.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="灯具编辑" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\灯具编辑.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="保存3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\保存3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="粘贴步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\粘贴步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="统一步时间" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\统一步时间.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="CSJ灯库工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CSJ灯库工具.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="前插入步1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\前插入步1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="打开工程3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\打开工程3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
